bindings/raku/lib/Proven/LibProven.rakumod


sub proven_float_div(num64, num64 --> FloatResult)
    is native('proven') is export { * }

sub proven_float_is_finite(num64 --> bool)
    is native('proven') is export { * }

sub proven_float_is_nan(num64 --> bool)
    is native('proven') is export { * }

sub proven_float_sqrt(num64 --> FloatResult)
    is native('proven') is export { * }

sub proven_float_ln(num64 --> FloatResult)
    is native('proven') is export { * }

# ============================================================================
# SafeHex (3 functions)
# ============================================================================

sub proven_hex_encode(Pointer, size_t, bool --> StringResult)
    is native('proven') is export { * }

# proven_hex_decode returns ProvenHexDecodeResult (same layout as StringResult)
sub proven_hex_decode(Pointer, size_t --> StringResult)
    is native('proven') is export { * }

# proven_hex_free takes a pointer to ProvenHexDecodeResult; we reuse the
# free-string path since the layout matches for our usage.
sub proven_hex_free(Pointer)
    is native('proven') is export { * }

# ============================================================================
# SafePassword (2 functions)
# ============================================================================

sub proven_password_is_common(Pointer, size_t --> bool)
    is native('proven') is export { * }

# proven_password_validate returns a PasswordResult struct
# handled at wrapper level due to struct complexity

# ============================================================================
# SafeHeader (6 functions)
# ============================================================================

sub proven_header_has_crlf(Pointer, size_t --> BoolResult)
    is native('proven') is export { * }

sub proven_header_is_valid_name(Pointer, size_t --> BoolResult)
    is native('proven') is export { * }

sub proven_header_is_dangerous(Pointer, size_t --> BoolResult)
    is native('proven') is export { * }

sub proven_header_render(Pointer, size_t, Pointer, size_t --> StringResult)
    is native('proven') is export { * }

sub proven_header_build_csp(Pointer, size_t --> StringResult)
    is native('proven') is export { * }

sub proven_header_build_hsts(int64, bool, bool --> StringResult)
    is native('proven') is export { * }

# ============================================================================
# SafeColor (3 functions)
# ============================================================================

sub proven_color_parse_hex(Pointer, size_t --> ColorResult)
    is native('proven') is export { * }

sub proven_color_rgb_to_hsl(RGBColor --> HSLColor)
    is native('proven') is export { * }

sub proven_color_to_hex(RGBColor --> StringResult)
    is native('proven') is export { * }

# ============================================================================
# SafeAngle (4 functions)
# ============================================================================

sub proven_angle_deg_to_rad(num64 --> num64)
    is native('proven') is export { * }

sub proven_angle_rad_to_deg(num64 --> num64)
    is native('proven') is export { * }

sub proven_angle_normalize_degrees(num64 --> num64)
    is native('proven') is export { * }

sub proven_angle_normalize_radians(num64 --> num64)
    is native('proven') is export { * }

# ============================================================================
# SafeUnit (2 functions)
# ============================================================================

sub proven_unit_convert_length(num64, int32, int32 --> FloatResult)
    is native('proven') is export { * }

sub proven_unit_convert_temp(num64, int32, int32 --> FloatResult)
    is native('proven') is export { * }

# ============================================================================
# SafeProbability (4 functions)
# ============================================================================

sub proven_probability_create(num64 --> num64)
    is native('proven') is export { * }

sub proven_probability_and(num64, num64 --> num64)
    is native('proven') is export { * }

sub proven_probability_or_exclusive(num64, num64 --> num64)
    is native('proven') is export { * }

sub proven_probability_not(num64 --> num64)
    is native('proven') is export { * }

# ============================================================================
# SafeCalculator (1 function)
# ============================================================================

sub proven_calculator_eval(Pointer, size_t --> FloatResult)
    is native('proven') is export { * }

# ============================================================================
# SafeML (5 functions)
# ============================================================================

sub proven_ml_sigmoid(num64 --> num64)
    is native('proven') is export { * }

sub proven_ml_relu(num64 --> num64)
    is native('proven') is export { * }

sub proven_ml_leaky_relu(num64, num64 --> num64)
    is native('proven') is export { * }

sub proven_ml_clamp(num64, num64, num64 --> num64)
    is native('proven') is export { * }

sub proven_ml_softmax(Pointer, Pointer, size_t --> int32)
    is native('proven') is export { * }

# ============================================================================
# SafeChecksum (2 functions)
# ============================================================================

sub proven_checksum_crc32(Pointer, size_t --> IntResult)
    is native('proven') is export { * }

sub proven_checksum_verify_crc32(Pointer, size_t, uint32 --> BoolResult)
    is native('proven') is export { * }

# ============================================================================
# SafeHTTP (3 functions)
# ============================================================================

sub proven_http_url_encode(Pointer, size_t --> StringResult)
    is native('proven') is export { * }

sub proven_http_url_decode(Pointer, size_t --> StringResult)
    is native('proven') is export { * }

# proven_http_parse_www_authenticate returns a complex nested struct;
# handled at wrapper level.

# ============================================================================
# SafeVersion (3 functions)
# ============================================================================

# proven_version_parse / proven_version_compare / proven_version_free
# return/accept complex structs with embedded pointers; handled at wrapper level.

# ============================================================================
# SafeCookie (6 functions)
# ============================================================================

sub proven_cookie_has_injection(Pointer, size_t --> BoolResult)
    is native('proven') is export { * }

sub proven_cookie_validate_name(Pointer, size_t --> BoolResult)
    is native('proven') is export { * }

sub proven_cookie_validate_value(Pointer, size_t --> BoolResult)
    is native('proven') is export { * }

sub proven_cookie_get_prefix(Pointer, size_t --> IntResult)
    is native('proven') is export { * }

sub proven_cookie_build_delete(Pointer, size_t --> StringResult)
    is native('proven') is export { * }

# proven_cookie_build_set_cookie takes a ProvenCookieAttributes struct by value;
# handled at wrapper level.

# ============================================================================
# SafeContentType (6 functions)
# ============================================================================

sub proven_content_type_can_sniff_dangerous(Pointer, size_t --> BoolResult)
    is native('proven') is export { * }

# proven_content_type_parse, proven_content_type_free, proven_content_type_render,
# proven_content_type_is_json, proven_content_type_is_xml return/accept complex
# nested structs; these are handled at wrapper level.

# ============================================================================
# SafeUUID (5 functions)
# ============================================================================

sub proven_uuid_v4(--> UUIDResult)
    is native('proven') is export { * }

sub proven_uuid_to_string(ProvenUUID --> StringResult)
    is native('proven') is export { * }

sub proven_uuid_parse(Pointer, size_t --> UUIDResult)
    is native('proven') is export { * }

sub proven_uuid_is_nil(ProvenUUID --> bool)
    is native('proven') is export { * }

sub proven_uuid_version(ProvenUUID --> uint8)
    is native('proven') is export { * }

# ============================================================================
# SafeRetry (2 functions)
# ============================================================================

sub proven_retry_delay(RetryConfig, uint32 --> uint64)
    is native('proven') is export { * }

sub proven_retry_should_retry(RetryConfig, uint32 --> bool)
    is native('proven') is export { * }

# ============================================================================
# Utility: convert Raku Str to (CArray[uint8], size_t) for FFI calls
# ============================================================================

#| Encode a Raku Str to a CArray[uint8] and its byte length.
#| Returns a two-element list: (CArray[uint8], Int).
sub str-to-buf(Str:D $s --> List) is export {
    my $blob = $s.encode('utf-8');
    my $ca   = CArray[uint8].new($blob.list);
    return ($ca, $blob.elems);
}

#| Extract a Raku Str from a StringResult, freeing the C-allocated memory.
#| Returns Nil if the status is non-zero.
sub extract-string(StringResult $r --> Str) is export {
    return Nil unless $r.status == 0;
    my $ptr = $r.ptr;
    return Nil unless $ptr.defined && !$ptr.Bool.not;
    my $len = $r.len;
    my $buf = Buf.new;
    my $raw = nativecast(CArray[uint8], $ptr);
    for ^$len -> $i {
        $buf.push($raw[$i]);
    }
    proven_free_string($ptr);
    return $buf.decode('utf-8');
}
